[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/yellowbird-midflap.png" type="Texture" id=1]
[ext_resource path="res://sprites/yellowbird-downflap.png" type="Texture" id=2]
[ext_resource path="res://sprites/yellowbird-upflap.png" type="Texture" id=3]
[ext_resource path="res://scripts/Flappy.gd" type="Script" id=4]
[ext_resource path="res://audio/point.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/hit.wav" type="AudioStream" id=6]
[ext_resource path="res://sprites/redbird-upflap.png" type="Texture" id=7]
[ext_resource path="res://sprites/bluebird-midflap.png" type="Texture" id=8]
[ext_resource path="res://sprites/redbird-midflap.png" type="Texture" id=9]
[ext_resource path="res://sprites/bluebird-downflap.png" type="Texture" id=10]
[ext_resource path="res://sprites/bluebird-upflap.png" type="Texture" id=11]
[ext_resource path="res://sprites/redbird-downflap.png" type="Texture" id=12]
[ext_resource path="res://audio/wing.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 11 ) ],
"loop": true,
"name": "fly_blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "fly_red",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "fly_yellow",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 15.0333

[sub_resource type="CircleShape2D" id=2]
radius = 14.0

[node name="Flappy" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fly_red"
frame = 1
speed_scale = 2.0

[node name="Detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PointAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="FlapAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -6.992

[connection signal="area_entered" from="Detect" to="." method="_on_Detect_area_entered"]
[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
